# pika-zoo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/cleanup/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/prepare-release/: SKILL.md
.github/workflows/: release.yml
src/pika_zoo/: __init__.py
src/pika_zoo/ai/: README.md  __init__.py  builtin.py  duckll.py  duckll_prediction.py  protocol.py  random.py  registry.py  sb3_adapter.py  stone.py
src/pika_zoo/engine/: README.md  __init__.py  constants.py  physics.py  rand.py  types.py
src/pika_zoo/env/: README.md  __init__.py  actions.py  observations.py  pikachu_volleyball.py
src/pika_zoo/records/: README.md  __init__.py  types.py
src/pika_zoo/rendering/: README.md  __init__.py  overlays.py  renderer.py  sprites.py
src/pika_zoo/scripts/: README.md  benchmark.py  demo.py  keyboard.py  play.py  record.py  video.py
src/pika_zoo/wrappers/: README.md  __init__.py  convert_single_agent.py  normalize_observation.py  record_episode.py  record_game.py  reward_channels.py  reward_shaping.py  simplify_action.py  simplify_observation.py
tests/: test_ai.py  test_engine.py  test_env.py  test_rendering.py  test_wrappers.py
