[project]
name = "pika-zoo"
version = "1.5.0"
description = "Python port of Pikachu Volleyball as an RL environment, with various utilities"
readme = "README.md"
authors = [
    { name = "namho kwon", email = "ootzk@kakao.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.0.0",
    "pettingzoo>=1.24.0",
    "numpy>=1.24.0",
]

[project.scripts]
play = "pika_zoo.scripts.play:main"
benchmark = "pika_zoo.scripts.benchmark:main"

[project.optional-dependencies]
rendering = [
    "pygame-ce>=2.5.0",
]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.0.0",
    "pygame-ce>=2.5.0",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
